
[package]
name = "uflow"
version = "0.3.2"
edition = "2018"
description = "Provides real-time, mixed-reliability, and congestion-controlled data transfer over the User Datagram Protocol (UDP)."
license = "MIT"
repository = "https://github.com/lowquark/uflow"

[lib]
name = "uflow"
path = "src/lib.rs"

[dependencies]
rand = "0.8.4"

[dev-dependencies]
md5 = "0.7.0"

