
[package]
name = "uflow"
version = "0.5.1"
edition = "2018"
description = "Provides ordered, mixed-reliability, and congestion-controlled data transfer over UDP"
license = "MIT"
repository = "https://github.com/lowquark/uflow"

[lib]
name = "uflow"
path = "src/lib.rs"

[dependencies]
rand = "0.8.4"

[dev-dependencies]
md5 = "0.7.0"

